# cloud-controlled-connected-camera-with-aws-iot-services

./: .gitignore  CMakeLists.txt  README.md  easy-install.sh  kvs_log_configuration
CMake/: FindLog4cplus.cmake
docs/: connected_camera_architecture_diagram.drawio
scripts/: install-aws-cli.sh
scripts/iot/: iam-permission-document.json  iam-policy-document.json  iot-device-policy-document-template.json  iot-kvs-policy-document-template.json  provision-thing.sh
scripts/kvs/: provision-stream.sh
source/: C3CameraProducer.cpp  C3CameraWebrtc.cpp  DeviceManager.cpp  DeviceManager.h  Logger.h  ProducerSink.cpp  ProducerSink.h  Servo.cpp  Servo.h  WebRtcCommon.cpp  WebRtcCommon.h  WebRtcSink.cpp
source/utils/: CommandLineUtils.cpp  CommandLineUtils.h
